// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radioGroup组件 快照测试 基本使用 1`] = `
<div
  className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group"
>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={true}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr kBTeec sinoui-radio sinoui-radio--checked"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={true}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;

exports[`radioGroup组件 快照测试 设置只读 1`] = `
Array [
  <div
    className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group sinoui-radio-group--disabled"
  >
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
  <div
    className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group sinoui-radio-group--readOnly"
  >
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI krkuGD sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置标题显示位置 1`] = `
Array [
  <div
    className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group"
  >
    <label
      className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
  <div
    className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group"
  >
    <label
      className="sc-AxgMl sc-AxheI eHEigO sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI eHEigO sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl sc-AxheI eHEigO sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="sc-AxhCb klcZHD sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-AxmLO kMIxgv sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置纵向排列 1`] = `
<div
  className="sc-AxjAm sc-AxirZ hCgMeA sinoui-radio-group sinoui-radio-group--column"
>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
    className="sc-AxgMl sc-AxheI bOFQGT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="sc-AxhCb klcZHD sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-AxmLO kMIxgv sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;
